--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ rusqlite = "0.24"
 serde_derive = "1.0.125"
 serde = "1.0.125"
 thiserror = "1.0.24"
-parking_lot = "0.11.1"
 minecraft-data-rs = "0.2.0"
-songbird = {version = "0.1.5",  features=["builtin-queue"]}
+songbird =  "0.1.5"
 serde_json = "1.0.64"
 rand = "0.8.3"
