Add spotify url support for music
Signed-off-by: trivernis <trivernis@protonmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ minecraft-data-rs = "0.2.0"
 songbird =  "0.1.5"
 serde_json = "1.0.64"
 rand = "0.8.3"
+regex = "1.4.5"
+aspotify = "0.7.0"
+lazy_static = "1.4.0"
+futures = "0.3.13"
