Add logging with fern
Signed-off-by: trivernis <trivernis@protonmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ regex = "1.4.5"
 aspotify = "0.7.0"
 lazy_static = "1.4.0"
 futures = "0.3.13"
+log = "0.4.14"
+fern = "0.6.0"
+chrono = "0.4.19"
+colored = "2.0.0"
