--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -14,3 +14,4 @@ diesel = {version="1.4.6", features=["postgres", "r2d2", "chrono"]}
 log = "0.4.14"
 diesel_migrations = "1.4.0"
 r2d2 = "0.8.9"
+tokio-diesel = {git = "https://github.com/Trivernis/tokio-diesel"}
