--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up toolchain
         uses: actions-rs/toolchain@v1
+        with:
+          override: true
       - name: Cache cargo builds
         uses: actions/cache@v2
         with:
