--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up toolchain
         uses: actions-rs/toolchain@v1
+        with:
+          override: true
       - name: Cache build data
         uses: actions/cache@v2
         with:
