--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tobi-rs"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["trivernis <trivernis@protonmail.com>"]
 edition = "2018"
 
@@ -29,3 +29,5 @@ sysinfo = "0.16.5"
 database = {path="./database"}
 reqwest = "0.11.2"
 chrono-tz = "0.5.3"
+sauce-api = "0.7.1"
+serenity_utils = "0.6.1"
