Change submodule name database to bot-databas for new naming scheme
Signed-off-by: trivernis <trivernis@protonmail.com>

--- a/bot-database/Cargo.toml
+++ b/bot-database/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "database"
+name = "bot-database"
 version = "0.1.0"
 authors = ["trivernis <trivernis@protonmail.com>"]
 edition = "2018"
