--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bot-database = {path="./bot-database"}
 serenity = "0.10.5"
 dotenv = "0.15.0"
 tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
@@ -26,7 +27,6 @@ fern = "0.6.0"
 chrono = "0.4.19"
 colored = "2.0.0"
 sysinfo = "0.16.5"
-database = {path="./database"}
 reqwest = "0.11.2"
 chrono-tz = "0.5.3"
 sauce-api = "0.7.1"
