Add subcrate bot-coreutils
Add subcrate bot-coreutils to move some utilities that don't
depend too heavily on other crates and require heavy testing
there.

Signed-off-by: trivernis <trivernis@protonmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,11 @@ jobs:
       - name: Build
         run: cargo build --verbose
 
-      - name: Run tests
+      - name: Test coreutils
+        run: cargo test --verbose --package bot-coreutils
+
+      - name: Test database
+        run: cargo test --verbose --package bot-database
+
+      - name: Test binary
         run: cargo test --verbose
