--- a/bot-coreutils/Cargo.toml
+++ b/bot-coreutils/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = "1.4.0"
+tokio = {version = "1.4.0", features = ["process", "io-util"]}
 log = "0.4.14"
 url = "2.2.1"
 mime_guess = "2.0.3"
