--- a/bot-coreutils/Cargo.toml
+++ b/bot-coreutils/Cargo.toml
@@ -11,3 +11,4 @@ tokio = {version = "1.4.0", features = ["process", "io-util"]}
 log = "0.4.14"
 url = "2.2.1"
 mime_guess = "2.0.3"
+rand = "0.8.3"
