Switch to stable toolchain and add more info to stats command
Signed-off-by: trivernis <trivernis@protonmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: stable
           override: true
       - name: Cache build data
         uses: actions/cache@v2
