--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.5.2"
 authors = ["trivernis <trivernis@protonmail.com>"]
 edition = "2018"
 
+[profile.release]
+panic = 'abort'
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
