--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -39,6 +39,10 @@ jobs:
         with:
           name: tobi-rs-linux-x86_64
           path: target/tobi-rs-linux-x86_64
+      - name: Upload to ipfs
+        uses: aquiladev/ipfs-action@v1
+        with:
+          path: target/tobi-rs-linux-x86_64
       - name: publish release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
