--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: cargo test --verbose
 
       - name: Move binaries
-        run: mv target/x86_64-unknown-linux-gnu/debug/tobi-rs target/tobi-rs-linux-x86_64_debug
+        run: mv target/debug/tobi-rs target/tobi-rs-linux-x86_64_debug
 
       - name: Import GPG key
         id: import_gpg
