--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ rustc_version_runtime = "0.2.0"
 trigram = "0.4.4"
 typemap_rev = "0.1.5"
 youtube-metadata = "0.1.1"
+lavalink-rs = {version="0.7.1", features=["native"]}
