--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ panic = 'abort'
 [dependencies]
 bot-database = {path="./bot-database"}
 bot-coreutils = {path="./bot-coreutils"}
-bot-serenityutils = {path="./bot-serenityutils"}
+serenity-rich-interaction = "0.1.0"
 serenity = "0.10.5"
 dotenv = "0.15.0"
 tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
