--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members=["bot-coreutils", "bot-database", "."]
 
 [package]
 name = "tobi-rs"
-version = "0.9.9"
+version = "0.9.10"
 authors = ["trivernis <trivernis@protonmail.com>"]
 edition = "2018"
 
@@ -22,7 +22,7 @@ serde_derive = "1.0.133"
 serde = "1.0.133"
 thiserror = "1.0.30"
 minecraft-data-rs = "0.4.1"
-songbird =  "0.2.0"
+songbird =  "0.2.1"
 serde_json = "1.0.74"
 rand = "0.8.4"
 regex = "1.5.4"
@@ -33,7 +33,7 @@ log = "0.4.14"
 fern = "0.6.0"
 chrono = "0.4.19"
 colored = "2.0.0"
-sysinfo = "0.22.4"
+sysinfo = "0.22.5"
 reqwest = "0.11.8"
 chrono-tz = "0.6.1"
 sauce-api = "0.9.1"
@@ -43,6 +43,7 @@ typemap_rev = "0.1.5"
 youtube-metadata = "0.2.0"
 xkcd-search = "0.1.2"
 animethemes-rs = "0.3.0"
+build-time = "0.1.1"
 
 [dependencies.tokio]
 version = "1.15.0"
