--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -28,23 +28,28 @@ jobs:
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('Cargo.lock') }}
+          path: /var/lib/containers/
+          key: ${{ runner.os }}-podman-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-podman-
+      - name: Build
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
+        with:
+          context: .
+          layers: true
+          containerfiles: ./Containerfile
+          platforms: ${{github.event.inputs.platforms}}
+          image: trivernis/tobi:latest
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: redhat-actions/podman-login@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
+          registry: docker.io
+      - name: Push
+        uses: redhat-actions/push-to-registry@v2
         with:
-          context: .
-          file: ./Dockerfile
-          platforms: ${{github.event.inputs.platforms}}
-          push: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-          tags: |
-            trivernis/tobi:latest
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: docker.io
