--- a/bot-database/migration/Cargo.toml
+++ b/bot-database/migration/Cargo.toml
@@ -9,4 +9,5 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
-sea-orm-migration = "0.9.2"
+sea-orm-migration = "0.9.3"
+tokio = { version = "1.21.2", features = ["rt", "net", "tracing"] }
