--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members=["bot-coreutils", "bot-database", "bot-database/migration", "."]
 
 [package]
 name = "tobi-rs"
-version = "0.10.4"
+version = "0.11.0"
 authors = ["trivernis <trivernis@protonmail.com>"]
 edition = "2018"
 
@@ -15,23 +15,23 @@ panic = 'abort'
 [dependencies]
 bot-database = {path="./bot-database"}
 bot-coreutils = {path="./bot-coreutils"}
-serenity = "0.11"
+serenity = "0.11.5"
 dotenv = "0.15.0"
-serde_derive = "1.0.137"
-serde = "1.0.137"
-thiserror = "1.0.31"
+serde_derive = "1.0.145"
+serde = "1.0.145"
+thiserror = "1.0.37"
 minecraft-data-rs = "0.5.0"
 songbird = "0.3.0"
-serde_json = "1.0.81"
+serde_json = "1.0.86"
 rand = "0.8.5"
-regex = "1.5.6"
+regex = "1.6.0"
 aspotify = "0.7.1"
 lazy_static = "1.4.0"
-futures = "0.3.21"
-chrono = "0.4.19"
+futures = "0.3.24"
+chrono = "0.4.22"
 sysinfo = "0.26.4"
-reqwest = "0.11.10"
-chrono-tz = "0.6.1"
+reqwest = "0.11.12"
+chrono-tz = "0.6.3"
 sauce-api = "0.9.3"
 rustc_version_runtime = "0.2.1"
 trigram = "0.4.4"
@@ -39,14 +39,14 @@ typemap_rev = "0.2.0"
 youtube-metadata = "0.2.0"
 xkcd-search = "0.1.2"
 animethemes-rs = "0.4.4"
-build-time = "0.1.1"
-tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
-tracing = "0.1.34"
-serenity-additions = "0.3.2"
+build-time = "0.1.2"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing = "0.1.37"
+serenity-additions = "0.3.4"
 
 [dependencies.tokio]
-version = "1.19.2"
+version = "1.21.2"
 features = ["macros", "rt-multi-thread"]
 
-[patch.crates-io]
-serenity-additions = { path = "../serenity-additions" }
+# [patch.crates-io]
+# serenity-additions = { path = "../serenity-additions" }
