Add forgejo id to container build task

--- a/.woodpecker/container.yml
+++ b/.woodpecker/container.yml
@@ -13,7 +13,8 @@ steps:
       repo: git.trivernis.net/trivernis/2b-rs
       registry: git.trivernis.net
       platforms: linux/amd64
-      username: woodpeckerbot
+      username: 
+        from_secret: forgejo_id
       password:
         from_secret: forgejo_token
     
